--- a/index.html
+++ b/index.html
@@ -1,3 +1,138 @@
-<h1>Welcome to My Website!</h1>
-<img src="../4.1 Webpages/assets/images/cat.png" alt="cat"/>
-<a href="../4.1 Webpages/public/about.html">About me</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lipstics</title>
+    <link rel="stylesheet" href="product.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand+Pre:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Cursive:wght@400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <section class="navigation-bar">
+        <header class="nav-bar">
+            <div class="navLogo-container">
+                <p><span>S</span>AUNDARYA BEAUTY</p>
+            </div>
+            <div>
+                <ul class="nav-links">
+                    <li><a href="#">NEW</a></li>
+                    <li><a href="#">LIPS</a></li>
+                    <li><a href="#">EYES</a></li>
+                    <li><a href="#">FACE</a></li>
+                    <li><a href="#">NAILS</a></li>
+                    <li><a href="#">SKIN</a></li>
+                    <li><a href="#">OFFERS</a></li>
+                    <li><a href="#">GIFTING</a></li>
+                </ul>
+            </div>
+            <div class="navicons-container">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16"><path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-basket3" viewBox="0 0 16 16"><path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM3.394 15l-1.48-6h-.97l1.525 6.426a.75.75 0 0 0 .729.574h9.606a.75.75 0 0 0 .73-.574L15.056 9h-.972l-1.479 6z"/></svg>
+            </div>
+        </header>
+    </section>
+
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1 class="hero-title">Naturally Beautiful. Authentically You.</h1>
+            <p class="hero-subtitle">Discover lipsticks that blend rich color with clean beauty — only at <strong>Saundarya Beauty</strong>.</p>
+            <a href="#shop" class="hero-button">Explore Products</a>
+        </div>
+    </section>
+
+    <section class="sort-section">
+        <div class="sort-by-dropdown">
+            <div class="sort-by">
+                SORT BY <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 25 16"><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/></svg>
+            </div>
+            <ul class="dropdown-menu">
+                <li>Price: Low to High</li>
+                <li>Price: High to Low</li>
+                <li>Alphabetical: A–Z</li>
+                <li>Alphabetical: Z–A</li>
+                <li>New Arrivals</li>
+                <li>Best Sellers</li>
+                <li>Clear Sort</li>
+            </ul>
+        </div>
+    </section>
+
+    <section> 
+        <main> 
+            <aside class="filters"> 
+                <div class="filter-item">AVAILABILITY <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 25 16"><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/></svg></div> 
+                <div class="filter-item">PRICE <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 25 16"><path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/></svg></div> 
+            </aside> 
+            <section class="products-grid" id="products-grid">
+                <div id="loader" class="loader"></div>
+            </section> 
+        </main> 
+    </section>
+
+    <button class="gift-icon" aria-label="Gift icon with notification">
+        <img alt="Gift icon" src="https://storage.googleapis.com/a1aa/image/e7480007-a96c-4f74-ad0d-6ddcfdb70ea2.jpg"/>
+        <div class="notification-badge">2</div>
+    </button>
+
+    <section>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-sections">
+                    <section class="footer-section">
+                        <h2 class="footer-heading">Quick Links</h2>
+                        <nav>
+                            <ul class="footer-nav">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Features</a></li>
+                                <li><a href="#">Pricing</a></li>
+                                <li><a href="#">FAQs</a></li>
+                                <li><a href="#">About Us</a></li>
+                            </ul>
+                        </nav>
+                    </section>
+                    <section class="footer-section">
+                        <h2 class="footer-heading">Shop</h2>
+                        <nav>
+                            <ul class="footer-nav">
+                                <li><a href="#">New</a></li>
+                                <li><a href="#">Lips</a></li>
+                                <li><a href="#">Eyes</a></li>
+                                <li><a href="#">Face</a></li>
+                                <li><a href="#">Skin</a></li>
+                                <li><a href="#">Nails</a></li>
+                            </ul>
+                        </nav>
+                    </section>
+            
+                    <section class="footer-section subscribe-section">
+                        <h2 class="footer-heading">Sign up for email and/or texts for the latest updates, special offers, and more.</h2>
+                        <p class="footer-text">By entering your email address and clicking “Join Us” you agree to receive marketing email messages from Saundarya Beauty at the email address provided. Unsubscribe at any time. View our Privacy Policy & Terms of Service.</p>
+                    <form class="subscribe-form">
+                        <label for="email" class="visually-hidden">Email address</label>
+                        <input type="email" id="email" placeholder="Email address" required>
+                        <button type="submit">Join Us</button>
+                    </form>
+                   </section>
+                </div>
+                <div class="footer-bottom">
+                    <p class="copyright">&copy; 2025 Company, Inc. All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
+    </section>
+
+    
+
+   
+   
+
+    <script src="./product.js"></script>
+</body>
+</html>
